--- a/app/src/main/res/layout/activity_density_chart.xml
+++ b/app/src/main/res/layout/activity_density_chart.xml
@@ -10,7 +10,7 @@
         android:id="@+id/linearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:padding="20dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,138 +22,77 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/greenlc"
+                android:id="@+id/redlc"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_weight="1"
-                android:paddingTop="10dp"
-                app:srcCompat="@drawable/green_location" />
+                app:srcCompat="@drawable/red_location" />
 
             <TextView
                 android:id="@+id/desc"
+                android:text="station - desc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
                 android:textSize="20dp" />
 
-            <ImageView
-                android:id="@+id/redlc"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_weight="1"
-                android:paddingBottom="10dp"
-                app:srcCompat="@drawable/red_location" />
+            <!--<ImageView-->
+                <!--android:id="@+id/greenlc"-->
+                <!--android:layout_width="40dp"-->
+                <!--android:layout_height="40dp"-->
+                <!--android:layout_weight="1"-->
+                <!--android:paddingBottom="10dp"-->
+                <!--app:srcCompat="@drawable/green_location" />-->
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/frame"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal">
-
-            <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/detail"
+                android:text="กรุณารอที่ชานชลา"
+                android:paddingLeft="50dp"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:paddingTop="50dp">
-
-                <ImageView
-                    android:id="@+id/tail"
-                    android:layout_width="80dp"
-                    android:layout_height="50dp"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/tail" />
-
-                <LinearLayout
-                    android:id="@+id/first"
-                    android:orientation="horizontal"
-                    android:layout_width="80dp"
-                    android:layout_height="5dp"
-                    android:layout_gravity="center_horizontal"
-                    android:background="@color/red" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingTop="50dp">
-
-                <ImageView
-                    android:id="@+id/mid1"
-                    android:layout_width="80dp"
-                    android:layout_height="50dp"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/mid" />
-
-                <LinearLayout
-                    android:id="@+id/second"
-                    android:orientation="horizontal"
-                    android:layout_width="80dp"
-                    android:layout_height="5dp"
-                    android:layout_gravity="center_horizontal"
-                    android:background="@color/green" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingTop="50dp">
-
-                <ImageView
-                    android:id="@+id/mid2"
-                    android:layout_width="80dp"
-                    android:layout_height="50dp"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/mid" />
-
-                <LinearLayout
-                    android:id="@+id/third"
-                    android:orientation="horizontal"
-                    android:layout_width="80dp"
-                    android:layout_height="5dp"
-                    android:layout_gravity="center_horizontal"
-                    android:background="@color/green" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingTop="50dp">
-
-                <ImageView
-                    android:id="@+id/head"
-                    android:layout_width="80dp"
-                    android:layout_height="50dp"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/head" />
-
-                <LinearLayout
-                    android:id="@+id/fourth"
-                    android:orientation="horizontal"
-                    android:layout_width="80dp"
-                    android:layout_height="5dp"
-                    android:layout_gravity="center_horizontal"
-                    android:background="@color/yellow" />
-            </LinearLayout>
+                android:layout_height="wrap_content" />
 
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingBottom="30dp"
-            android:paddingTop="10dp">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <include android:id="@+id/arriving1"
+                layout="@layout/density_chart" />
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="30dp" />
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginStart="62dp"
+                    android:layout_marginTop="11dp"
+                    android:text="คันถัดไป" />
+                <include
+                    android:id="@+id/arriving2"
+                    layout="@layout/density_chart_next" />
+            </RelativeLayout>
 
         </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="30dp"/>
 
         <include layout="@layout/color_indicator" />
-
 
         <TextView
             android:id="@+id/debug"
