--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,50 +7,10 @@
     android:background="#ffffff"
     tools:context="com.wireless.g5.dbtsfragver.MainActivity">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="16dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageButton
-            android:id="@+id/toggle_list"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@drawable/button"
-            android:gravity="center"
-            android:scaleType="fitCenter"
-            android:src="@drawable/toggle_list" />
-
-        <View
-            android:layout_width="15dp"
-            android:layout_height="0dp" />
-
-        <ImageButton
-            android:id="@+id/toggle_grid"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@drawable/button"
-            android:gravity="center"
-            android:scaleType="fitCenter"
-            android:src="@drawable/toggle_card3"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="0dp" />
-    </LinearLayout>
-
-    <!--<ImageView-->
-        <!--android:id="@+id/map"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:src="@drawable/map" />-->
-
     <FrameLayout
         android:id="@+id/layout_fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="450dp"
+        android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_marginBottom="8dp"
