--- a/app/src/main/res/layout/color_indicator.xml
+++ b/app/src/main/res/layout/color_indicator.xml
@@ -15,85 +15,103 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:columnCount="5">
+            android:columnCount="15">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_columnWeight="2"
-                android:orientation="vertical">
+                android:layout_columnWeight="3"
+                android:padding="10dp"
+                android:orientation="horizontal">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
                     <LinearLayout
-                        android:layout_width="10dp"
-                        android:layout_height="10dp"
-                        android:layout_gravity="center"
-                        android:background="@color/green" />
-                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+                        <LinearLayout
+                            android:layout_width="10dp"
+                            android:layout_height="10dp"
+                            android:layout_gravity="center"
+                            android:background="@color/green" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:text="   0-10 คน   " />
+                    </LinearLayout>
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="   0-10 people   " />
-                </LinearLayout>
-
+                        android:orientation="horizontal">
+                        <LinearLayout
+                            android:layout_width="10dp"
+                            android:layout_height="10dp"
+                            android:layout_gravity="center"
+                            android:background="@color/yellow" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:text="   10-20 คน   " />
+                    </LinearLayout>
+            </LinearLayout>
+                <View
+                    android:layout_width="50dp"
+                    android:layout_height="0dp"/>
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
                     <LinearLayout
-                        android:layout_width="10dp"
-                        android:layout_height="10dp"
-                        android:layout_gravity="center"
-                        android:background="@color/yellow" />
-                    <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:fontFamily="sans-serif-condensed"
-                        android:text="   10-30 people   " />
-                </LinearLayout>
+                        android:orientation="horizontal">
+                        <LinearLayout
+                            android:layout_width="10dp"
+                            android:layout_height="10dp"
+                            android:layout_gravity="center"
+                            android:background="@color/orange" />
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:text="   20-30 คน   " />
+                    </LinearLayout>
                     <LinearLayout
-                        android:layout_width="10dp"
-                        android:layout_height="10dp"
-                        android:layout_gravity="center"
-                        android:background="@color/red" />
-
-                    <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="   > 30 people   " />
+                        android:orientation="horizontal">
+                        <LinearLayout
+                            android:layout_width="10dp"
+                            android:layout_height="10dp"
+                            android:layout_gravity="center"
+                            android:background="@color/red" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:text="   > 30 คน   " />
+                    </LinearLayout>
                 </LinearLayout>
 
             </LinearLayout>
 
             <TextView
-                android:id="@+id/num_people"
-                android:layout_width="70dp"
+                android:visibility="gone"
+                android:id="@+id/remark"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:layout_columnWeight="1"
+                android:layout_gravity="center"
+                android:layout_columnWeight="7"
+                android:text=""
                 android:fontFamily="sans-serif-condensed"
-                android:text="15 "
-                android:textAlignment="textEnd"
-                android:textSize="50dp" />
-
-            <TextView
-                android:layout_width="20dp"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-condensed"
-                android:layout_columnWeight="1"
-                android:text="people"
-                android:textSize="20dp" />
-
+                android:textSize="20dp"/>
         </GridLayout>
     </LinearLayout>
 
