--- a/app/src/main/res/layout/station_grid.xml
+++ b/app/src/main/res/layout/station_grid.xml
@@ -1,6 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
     android:background="@drawable/grid_bg">
@@ -24,5 +25,12 @@
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
         android:gravity="center_horizontal"/>
+
+    <ImageView
+        android:id="@+id/fav"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/like_grey"/>
 
 </LinearLayout>
