--- a/app/src/main/res/layout/toggle_view_button.xml
+++ b/app/src/main/res/layout/toggle_view_button.xml
@@ -1,46 +1,61 @@
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:gravity="center_vertical|right"
     android:orientation="horizontal">
+
+    <TextView
+        android:id="@+id/appname"
+        android:text="DBTS"
+        android:textSize="21dp"
+        android:layout_marginTop="14dp"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:textColor="#ffffff" />
+
+    <ImageButton
+        android:id="@+id/toggle_fav"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:layout_marginEnd="106dp"
+        android:layout_marginTop="20dp"
+        android:layout_alignParentRight="true"
+        android:background="@drawable/button"
+        android:scaleType="fitCenter"
+        android:src="@drawable/toggle_fav" />
 
     <ImageButton
         android:id="@+id/toggle_map"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
         android:layout_marginEnd="76dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="20dp"
+        android:layout_alignParentRight="true"
         android:background="@drawable/button"
-        android:gravity="center"
         android:scaleType="fitCenter"
-        android:src="@drawable/toggle_map1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:src="@drawable/toggle_map1" />
 
     <ImageButton
         android:id="@+id/toggle_list"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginTop="4dp"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/button"
-        android:gravity="center"
         android:scaleType="fitCenter"
         android:src="@drawable/toggle_list1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_alignParentRight="true" />
 
     <ImageButton
         android:id="@+id/toggle_grid"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginTop="4dp"
+        android:layout_alignParentRight="true"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/button"
-        android:gravity="center"
         android:scaleType="fitCenter"
-        android:src="@drawable/toggle_card4"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</android.support.constraint.ConstraintLayout>
+        android:src="@drawable/toggle_card4" />
+</RelativeLayout>
