--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="gray">#444440</color>
     <color name="red">#ff0000</color>
     <color name="green">#00ff00</color>
-    <color name="yellow">#ffbb00</color>
+    <color name="yellow">#ffcc00</color>
+    <color name="orange">#ff9900</color>
 </resources>
