--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="green">#00ff00</color>
     <color name="yellow">#ffcc00</color>
     <color name="orange">#ff9900</color>
+    <color name="white">#ffffff</color>
 </resources>
